css/main.css
/*
 *  Copyright (c) 2015 The WebRTC project authors. All Rights Reserved.
 *
 *  Use of this source code is governed by a BSD-style license
 *  that can be found in the LICENSE file in the root of the source
 *  tree.
 */

#container {
  min-height: 10em;
  max-width: 90%;
  margin: 1em auto;
}

.phrase-buttons {
  margin: 5em 8em 0 0;
}

.phrase-buttons h1 {
  margin: 5em 7em 0 0;
  width: 50%;
  margin: auto;
  font-size: min(3vmax, 1.5em);
}

.outputSelector {
  margin: 0 1em 0 0;
  font-size: min(2vmax, 1em);
}

.group {
  display: flex;
  flex-wrap: wrap;
  margin: 1em 0;
}

.phrase {
  font-size: min(1.7vmax, 1em);
  padding: 0.5em;
  margin: 0.2em;
}

.index-letter-box {
  border: thin solid black;
  font-size: min(1.8vmax, 1.1em);
  padding: 0.5em 1.5em;
  background: cornflowerblue;
  text-transform: uppercase;
  margin: 0.1em 0.2em;
  color: white;
}

.index-letter-selection {
  font-size: 13px;
  padding: 0.5em 1.5em;
  text-transform: uppercase;
  margin: 0.1em 0.2em;
}

.voice-type {
  font-size: min(2vmax, 1.2em);
}

.menu-row {
  display: flex;
  flex-wrap: wrap;
  margin: 1em 0;
}

.menu-bar {
  background-color: lightgray;
  padding: 0 3em;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.side-bar {
  position: fixed;
  right: 1em;
  margin: 1em;
}

